--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Poppins', sans-serif;
+}
+
+.weather{
+  background-color: #0c123f;
+  height: 335px;
+  width: 330px;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 4%;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.weather h4{
+  font-weight: 500;
+  font-size: 22px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather h5{
+  font-weight: 500;
+  font-size: 20px;
+}
+.weather h6{
+  font-weight: 500;
+  font-size: 20px;
+  font-style: italic;
+}
+.weather p{
+  font-size: 18px;
+}
+.command{
+  float: inline-end;
+}
+.heading{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.footer{
+  color: white;
+  text-align: center;
 }
